add post and project post git functionality
